# CT-NEXUS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE.md  pyproject.toml  readme.md
documentation/: Getting_started_OpenMind.md  dataset_format.md  installation_instructions.md  set_environment_variables.md  setting_up_paths.md
src/feature_extraction/: .dockerignore  extract_feat_EAO.py  extract_feat_EAO.sh  extract_feat_EAO_alldiseases.sh  extract_feat_LP.py  extract_feat_LP.sh  extract_feat_alldiseases.sh  extract_feat_alldiseases_public.sh
src/feature_extraction/models/: consis_arch.py
src/feature_extraction/transforms/: monai_transforms.py
src/nnssl/: Debug_Stage1_UHN.bash  Stage1_UHN.bash  Stage1_UHN_jma.bash  Stage1_UHN_jma_S3D.bash  Stage1_UHN_jma_Stage2.bash  Stage1_UHN_jma_Stage2_Clf.bash  Stage1_UHN_jma_VoCo.bash  add_val_json.py  configuration.py  create_flat_json.py  crop_1024_pet.py  crop_foreground.py  make_splits_json.py  paths.py  prep_ct_fm.bash  prep_ct_fm_MultiWindow.bash  prep_merlin.bash  prep_merlin_test.bash  train_2gpu_alldata_Stage1.bash  train_2gpu_alldata_Stage1_Merlin_UHN.bash  train_2gpu_alldata_Stage2_Merlin_UHN.bash  train_AlignMAEFT_2gpu.bash  train_AlignMAEFT_2gpu_5_0_0.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2_MaxPool.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2_MaxPoolNoPool.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2_NoContrastive.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2_NoInvert.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2_NoPool.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2_NoRician.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2_NoRicianNoInvert.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2_Outsize9.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2_UseProj.bash  train_AlignMAEFT_2gpu_5_0_0_Stage2_UseProj_MaxPool.bash  train_AlignMAEp160.bash  train_AlignMAEp160_stage2.bash  train_smartbrain_2gpu.bash  train_smartbrain_h100.bash
src/nnssl/adaptation_planning/: adaptation_plan.py
src/nnssl/architectures/: architecture_registry.py  consis_arch.py  evaMAE_module.py  evaSimMIM_module.py  get_network_by_name.py  get_network_from_plan.py  gvsl_architecture.py  noskipResEncUNet.py  pclrv2_architecture.py  spark_model.py  spark_utils.py  swinunetr_architecture.py  voco_architecture.py
src/nnssl/data/: raw_dataset.py  utils.py
src/nnssl/dataset_conversion/: Dataset001_OpenMind.py  Dataset002_SmartBRAIN.py  Dataset027_ACDC.py  Dataset227_YBM.py  Dataset228_Abide.py  Dataset603_FOMO60k3.py  Dataset740_OASIS3.py  Dataset741and742_SMALL_OASIS3.py  Dataset743_ABCD_NIH.py  Dataset800_Rocket_v0.py  check_openneuro_files.py  convert_raw_dataset_from_old_nnunet_format.py  filter_mris.py  filter_mris_all.py  generate_dataset_json.py  preprocess_sub_script.py
src/nnssl/experiment_planning/: fingerprint_entry.py  plan_and_preprocess_api.py  plan_and_preprocess_entrypoints.py  preprocess_entrypoint.py
src/nnssl/imageio/: base_reader_writer.py  readme.md  (+4 more)
(+115 files in other folders)
